Add opens options